# deep_search_ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHECK_MODELS.md  DOCKER_BUILD_FIX.txt  LLM_INTEGRATION_FIXES_SUMMARY.md  Makefile  OPENROUTER_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  RECENT_CHANGES.md  START_HERE.md  build_dist.sh  docker-compose.yml  generate_secrets.py  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/app/: agent.py  assistant_agent.py  auth_db.py  auth_routes.py  auth_utils.py  db.py  debate_engine.py  enhanced_scraper.py  executor_client.py  kb_ingest.py  kb_models.py  kb_retrieval.py  kb_schemas.py  main.py  memory_graph.py  model_registry.py  personas.py  search_bridge.py  test_models_api.py
backend/app/browsing/: agent_browser_cli.py  session_manager.py
backend/app/cache/: semantic_cache.py
backend/app/evidence/: distiller.py  web_evidence_worker.py
backend/app/models/: inception_client.py  router.py
backend/app/rag/: chunking.py  (+2 more)
executor-rust/: Cargo.toml  Dockerfile  README.md
executor-rust/src/: approval.rs  audit.rs  config.rs  db.rs  main.rs  models.rs  policy.rs  rollback.rs  scheduler.rs
executor-rust/src/tools/: archive.rs  clipboard.rs  fs.rs  mod.rs  net.rs  notes.rs  shell.rs
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
llm_service_provider/: MODEL_CLARIFICATION.md  README.md  anthropic.txt  gemini.txt  grok.txt  inception.txt  mistral.txt  ollama.txt  openai.txt  openrouter.txt  qwen.txt
searxng/: settings.yml
(+92 files in other folders)
