[package]
name = "deepsearch-executor"
version = "0.1.0"
edition = "2021"
description = "Local executor for Deep Search AI Assistant - filesystem, downloads, shell, notes"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["stream", "blocking"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
regex = "1"
base64 = "0.21"
async-stream = "0.3"
futures = "0.3"
trash = "3"
